first version Java